# stm32-wave-generator

./: . gitattributes  .gitattributes  .gitignore  CMakeLists.txt  README.md
drivers/: CMakeLists.txt
integration-tests/: CMakeLists.txt  Main.cpp  TestSuite.cpp  TestSuite.hpp  TestUtils.cpp  TestUtils.hpp  device.c  main.c  test_utils.c  test_utils.h  uart.c  uart.h
integration-tests/dwf/: DwfDeviceHandler.cpp  DwfDeviceHandler.hpp  Oscilloscope.cpp  Oscilloscope.hpp  UART.cpp  UART.hpp  device.c  device.h  scope.c  scope.h  uart.c  uart.h
src/: Main.cpp  Waves.cpp  Waves.hpp  main.c  rcc.c  timer.c  timer.h  uart.c  uart.h  waves.c  waves.h
src/cmd/: CommandParser.cpp  CommandParser.hpp
src/peripherals/: ADCPeripheral.cpp  ADCPeripheral.hpp  DACPeripheral.cpp  DACPeripheral.hpp  Peripheral.hpp  Peripherals.cpp  Peripherals.hpp  RCCPeripheral.cpp  RCCPeripheral.hpp  UART2Peripheral.cpp  UART2Peripheral.hpp  UART3Peripheral.cpp  UART3Peripheral.hpp  UARTPeripheral.cpp  UARTPeripheral.hpp  dac.c  dac.h  rcc.c  timer.c  timer.h  uart.c  uart.h
src/signals/: Frequency.cpp  Frequency.hpp  Level.cpp  Level.hpp  SignalFactory.hpp  WaveForm.cpp
src/waves/: Frequency.cpp  Frequency.hpp  SawWave.hpp  SineGenerator.hpp  SineWave.hpp  SquareWave.hpp  TriangleWave.hpp  WaveFactory.hpp  WaveForm.hpp  WaveGenerator.hpp
